tests/test61.rael.exp
Error [tests/test61.rael:1:9]: Invalid operation (+) on types
| log "2" + Void
|         ^
