tests/test61.rael
log "2" + Void